compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__alternative_patterns_list.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs) -> Int {\n  case xs {\n    [1] | [1, 2] -> 0\n    _ -> 1\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) listHasLength;
  
  main =
    xs:
    if listHasLength xs 1 && xs.head == 1 then 0
    else if listHasLength xs 2 && xs.head == 1 && xs.tail.head == 2 then 0
    else 1;
in
{ inherit main; }
