compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__constant.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs) {\n  case xs {\n    #(x) if x == 1 -> x\n    _ -> 0\n  }\n}\n"
---
let
  main =
    xs:
      if (builtins.elemAt xs 0) == 1 then let x = (builtins.elemAt xs 0); in x
      else 0;
in { inherit main; }
